[gd_scene load_steps=8 format=3 uid="uid://b5x8qhyy1234"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.3
height = 1.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_body"]
albedo_color = Color(0.2, 0.4, 0.8, 1)
roughness = 0.7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_head"]
albedo_color = Color(0.95, 0.8, 0.7, 1)
roughness = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_legs"]
albedo_color = Color(0.2, 0.25, 0.35, 1)
roughness = 0.8

[sub_resource type="BoxMesh" id="BoxMesh_body"]
material = SubResource("StandardMaterial3D_body")
size = Vector3(0.5, 0.9, 0.3)

[sub_resource type="BoxMesh" id="BoxMesh_head"]
material = SubResource("StandardMaterial3D_head")
size = Vector3(0.4, 0.4, 0.4)

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="MeshRoot" type="Node3D" parent="."]

[node name="Body" type="MeshInstance3D" parent="MeshRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("BoxMesh_body")

[node name="Head" type="MeshInstance3D" parent="MeshRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("BoxMesh_head")

[node name="LeftArm" type="MeshInstance3D" parent="MeshRoot"]
transform = Transform3D(0.35, 0, 0, 0, 0.8, 0, 0, 0, 0.35, -0.4, 0.9, 0)
material_override = SubResource("StandardMaterial3D_body")
mesh = SubResource("BoxMesh_body")

[node name="RightArm" type="MeshInstance3D" parent="MeshRoot"]
transform = Transform3D(0.35, 0, 0, 0, 0.8, 0, 0, 0, 0.35, 0.4, 0.9, 0)
material_override = SubResource("StandardMaterial3D_body")
mesh = SubResource("BoxMesh_body")

[node name="LeftLeg" type="MeshInstance3D" parent="MeshRoot"]
transform = Transform3D(0.35, 0, 0, 0, 0.6, 0, 0, 0, 0.35, -0.15, 0.3, 0)
material_override = SubResource("StandardMaterial3D_legs")
mesh = SubResource("BoxMesh_body")

[node name="RightLeg" type="MeshInstance3D" parent="MeshRoot"]
transform = Transform3D(0.35, 0, 0, 0, 0.6, 0, 0, 0, 0.35, 0.15, 0.3, 0)
material_override = SubResource("StandardMaterial3D_legs")
mesh = SubResource("BoxMesh_body")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8)

[node name="InteractionRay" type="RayCast3D" parent="CameraPivot/Camera3D"]
target_position = Vector3(0, 0, -3)
